--- a/public/mockup/styles/_threads.sass
+++ b/public/mockup/styles/_threads.sass
@@ -60,6 +60,7 @@
       float: left
       display: block
       clear: none
+      width: 550px
       a
         font-weight: bold
         text-decoration: none
@@ -93,10 +94,10 @@
       padding: 10px 10px 10px 44px
       height: 16px
   form.new_comment
-    border-left: 4px solid #eee
-    background-color: $comments_bkg
+    //border-left: 4px solid #eee
+    //background-color: $comments_bkg
     margin: 0
-    padding: 2px 0 5px 6px
+    //padding: 2px 0 5px 6px
 
 .expand_comment
   a
