--- a/public/mockup/styles/application.sass
+++ b/public/mockup/styles/application.sass
@@ -31,7 +31,7 @@
 @import calendar_date_select
 @import autocomplete
 @import facebox
-//Commented because it does problem in the mockup
+//Commented because it gives error in the mockup (on local)
 //@import progress_bars
 @import tooltips
 @import preview
