--- a/public/mockup/styles/_users.sass
+++ b/public/mockup/styles/_users.sass
@@ -276,13 +276,19 @@ a.thumb_avatar
 
 a.micro_avatar
   border: 1px solid $clr_gray_50
-  margin: 5px 10px 8px 8px
+  margin: 4px 5px 0px 8px
   padding: 0
   float: left
   width: $micro_size
   height: $micro_size
   +rounded(2px)
-  //margin-right: 10px
+  margin-right: 10px
+.marco_avatar 
+  a.micro_avatar
+    border: none
+    margin: 3px
+    +rounded(0px)
+  
 
 .card
   font-size: 12px
