--- a/app/styles/_tasks.sass
+++ b/app/styles/_tasks.sass
@@ -131,11 +131,7 @@ form.new_task, form.edit_task, .task_list_form
     border-radius: 5px
     box-shadow: #EEE 1px 1px 1px
     margin: 1px 0
-    padding:
-      top: 4px
-      bottom: 2px
-      left: 10px
-      right: 10px
+    padding: 4px 2px 10px 10px
 
     .expanded_actions
       display: inline
@@ -145,9 +141,11 @@ form.new_task, form.edit_task, .task_list_form
         text-decoration: underline
         font-size: 10px
         margin-left: 4px
+
     .task_drag
-      display: none
       cursor: move
+      display: inline-block
+
     .taskStatus
       text-align: right
       float: left
@@ -155,15 +153,14 @@ form.new_task, form.edit_task, .task_list_form
       padding-left: 22px
       padding-right: 5px
       line-height: 16px
-      display: none
       span
         display: inline-block
         vertical-align: top
         width: 23px
         padding: 0
         text-align: center
+
     .status
-      position: absolute
       left: 20px
       top: 5px
       width: 60px
@@ -177,11 +174,6 @@ form.new_task, form.edit_task, .task_list_form
       .taskName
         .lock_icon
           display: inline-block
-    &:hover .taskStatus
-      width: 45px
-      padding-left: 0
-      .task_drag
-        display: inline-block
     .taskName
       min-height: 18px
       font-size: 12px
