Task#assigned is a Person. The full name needs the person.

--- a/app/templates/partials/comment.jade.erb
+++ b/app/templates/partials/comment.jade.erb
@@ -28,7 +28,7 @@
       - if (self.assigned)
         p.assigned_transition
           | Assigned to
-          = self.full_name(self.assigned)
+          = self.full_name(self.assigned.user)
 
       != self.body_html
     - if (self.uploads && self.uploads.length)
