--- a/public/mockup/styles/_activities.sass
+++ b/public/mockup/styles/_activities.sass
@@ -24,7 +24,6 @@
     border: 1px solid $clr_gray_50
     +rounded(3px)
     margin: 7px
-      left: 7px
   a
     font-weight: bold
   img
@@ -43,3 +42,6 @@
   //border-left: 4px solid white
   //background-color: $comments_bkg
   +gradient($comments_left_border, $comments_bkg)
+
+#activity_paginate_link
+  margin-left: 11px
