--- a/public/mockup/styles/_overlays.sass
+++ b/public/mockup/styles/_overlays.sass
@@ -2,7 +2,9 @@
   display: inline-block
   position: relative
   font-size: 12px
-  margin-bottom: 5px
+  margin-right: 4px
+  a
+    font-weight: normal !important
   .overlay
     position: absolute
     top: -11px
