--- a/public/mockup/styles/_tasks.sass
+++ b/public/mockup/styles/_tasks.sass
@@ -321,8 +321,9 @@ span.task_status, span.current_task_status
   padding: 0 3px
   text-transform: uppercase
   font-size: 11px
-  -moz-border-radius: 4px
-  -webkit-border-radius: 4px
+  +rounded(2px)
+  //-moz-border-radius: 4px
+  //-webkit-border-radius: 4px
   display: inline-block
   line-height: 14px
 p.assigned_transition
