--- a/public/mockup/styles/_typography.sass
+++ b/public/mockup/styles/_typography.sass
@@ -51,6 +51,11 @@ textarea.placeholder, input.placeholder
   font-size: 12px
   color: #010101
   overflow-y: hidden
+  .before
+    span
+      margin-right: 3px
+    .task_status
+      margin-top: 5px
   h1, h2
     font-size: 16px
     border-bottom: 0
@@ -64,7 +69,7 @@ textarea.placeholder, input.placeholder
       font-size: 12px
   p
     line-height: 18px
-    margin: 2px 0 8px
+    margin: 3px 0 8px
   a
     text-decoration: underline
   blockquote
